Mise à jour du README pour mettre en avant la documentation

--- a/README.ipynb
+++ b/README.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## 🧪 Paradigme Expérimental\n",
     "\n",
-    "Le participant doit naviguer à l'intérieur d'un tunnel circulaire tout en gérant une double tâche motrice et cognitive. L'expérience croise 4 conditions expérimentales :\n",
+    "Le participant doit naviguer à l'intérieur d'un tunnel circulaire. L'expérience croise 4 conditions expérimentales :\n",
     "\n",
     "1. **VP (Vitesse - Précision) avec feedback** : Tracé classique avec aide visuelle.\n",
     "2. **VP (Vitesse - Précision) sans feedback** : Tracé basé sur la proprioception (seul le pointeur est visible).\n",
@@ -30,8 +30,10 @@
     "  * *Analyse :* `analysis_global.py`, `analysis_publication.py`, `analysis_ml.py`\n",
     "  * *Génération de rapports :* `generate_tech_doc.py`, `generate_master_report.py`\n",
     "* 📁 **`data/`** : Contient le dictionnaire `metadata.csv` (scores OSATS). *(Note : Les données brutes des participants sont ignorées via `.gitignore` pour des raisons d'éthique et de RGPD)*.\n",
-    "* 📁 **`doc/`** : Contient la documentation technique complète, le protocole de passation détaillé au format HTML et les graphiques de résultats.\n",
+    "* 📁 **`doc/`** : Contient les graphiques de résultats et tableaux de score.\n",
     "* 📓 **`Analyse_Demonstration.ipynb`** : Le carnet de notes interactif démontrant la logique d'analyse.\n",
+    "* 📑 **`Protocole_HaptiMed.html`** & **`Documentation_Technique.html`** : La documentation technique complète et le protocole de passation détaillé (consignes exactes pour les participants), accessibles directement à la racine.\n",
+    "\n",
     "\n",
     "## 🚀 Comment lire ce projet ?\n",
     "\n",
